env.sample updated 😘

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,1 +1,12 @@
-PORT=
+PORT= <!--ENTER YOUR VALUE -->
+
+# DATABASE CREDS
+POSTGRES_URL= <!--ENTER YOUR VALUE -->
+
+# CLERK CREDS
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY= <!--ENTER YOUR VALUE -->
+CLERK_SECRET_KEY= <!--ENTER YOUR VALUE -->
+
+#UPSTASH
+UPSTASH_REDIS_REST_URL= <!--ENTER YOUR VALUE -->
+UPSTASH_REDIS_REST_TOKEN= <!--ENTER YOUR VALUE -->
