--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.9",
     "cors": "^2.8.5",
+    "cron": "^4.3.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
