--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -6,3 +6,6 @@ POSTGRES_URL= <!--ENTER YOUR VALUE -->
 #UPSTASH
 UPSTASH_REDIS_REST_URL= <!--ENTER YOUR VALUE -->
 UPSTASH_REDIS_REST_TOKEN= <!--ENTER YOUR VALUE -->
+
+#BACKEND URL
+API_URL= <!--ENTER YOUR VALUE -->
